add users categories , and integration tests for all the endpoints
