# src/main/java/training/salonzied/dao/entities/TreatmentEntity.java
@@ -1,0 +1,41 @@
+package training.salonzied.dao.entities;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
+
+import java.time.LocalDateTime;
+
+@Entity
+@Table(name = "treatments")
+@NoArgsConstructor
+@AllArgsConstructor
+@Data
+@Builder
+public class TreatmentEntity {
+    @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+    @Column(unique = true, nullable = false,length = 120)
+    private String name;
+    @Column(length = 512)
+    private String description;
+    @Column(nullable = false)
+    private Double price;
+    @Column(nullable = false)
+    private Integer duration;
+    @Column(name="time_between_treatments")
+    private Integer timeBetweenTreatments;
+    @JoinColumn(name = "category_id", nullable = false)
+    @ManyToOne(fetch = FetchType.LAZY)
+    private CategoryEntity category;
+    @CreationTimestamp
+    @Column(name = "created_at", nullable = false, updatable = false)
+    private LocalDateTime createdAt;
+    @UpdateTimestamp
+    @Column(name = "updated_at")
+    private LocalDateTime updatedAt;
+}
